--- a/surtidora_api.csproj
+++ b/surtidora_api.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CrudController.cs" />
     <Compile Include="Controllers\EjemploController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -280,6 +281,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Login\index.cshtml" />
+    <Content Include="Views\Crud\Crear.cshtml" />
+    <Content Include="Views\Crud\Index.cshtml" />
+    <Content Include="Views\Crud\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
