--- a/surtidora_api.csproj
+++ b/surtidora_api.csproj
@@ -284,6 +284,7 @@
     <Content Include="Views\Crud\Crear.cshtml" />
     <Content Include="Views\Crud\Index.cshtml" />
     <Content Include="Views\Crud\Editar.cshtml" />
+    <Content Include="Views\Crud\Eliminar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
